# RM_pratice

./: README.md
camera_test/: CMakeLists.txt  main.cpp  test.cpp
camera_test/Configs/: test.yaml
camera_test/camera_lib/: CMakeLists.txt
camera_test/camera_lib/camera/: my_camera.cpp
camera_test/modules/: CMakeLists.txt
camera_test/modules/detect/: detect.cpp  detect.hpp
camera_test/serial_lib/: CMakeLists.txt
camera_test/serial_lib/serial/: serial.cpp
camera_test/utils/: robot.hpp
git/serial_try/: CMakeLists.txt  README.md  main.cpp
git/serial_try/serial_lib/: CMakeLists.txt
git/serial_try/serial_lib/serial/: serial.cpp  serial.hpp
mvsdk_try/: CMakeLists.txt  README.md  calibrateCamera函数使用说明.md  main.cpp
mvsdk_try/Configs/camera/: MV-SUA133GC-T-Manifold.config
mvsdk_try/camera_lib/: CMakeLists.txt
mvsdk_try/camera_lib/camera/: my_camera.hpp
mvsdk_try/camera_lib/camera/MVSDK/: CameraApi.h
